crates/rome_js_formatter/tests/specs/prettier/js/babel-plugins/destructuring-private.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
expression: destructuring-private.js
---
# Input
```js
class Foo {
  #x = 1;
  constructor() {
    console.log(this.#x); // => 1
    const { #x: x } = this;
    console.log(x); // => 1
  }
  equals({ #x: otherX }) {
    const { #x: currentX } = this;
    return currentX === otherX;
  }
}

```

# Output
```js
class Foo {
  #x = 1;
  constructor() {
    console.log(this.#x); // => 1
    const { #x: x } = this;
    console.log(x); // => 1
  }
  equals({ #x: otherX }) {
    const { #x: currentX } = this;
    return currentX === otherX;
  }
}

```

# Errors
```
error[SyntaxError]: expected an identifier, a member name, or a rest pattern but instead found '#x: x'
  ┌─ destructuring-private.js:5:13
  │
5 │     const { #x: x } = this;
  │             ^^^^^ Expected an identifier, a member name, or a rest pattern here

error[SyntaxError]: expected an identifier, a member name, or a rest pattern but instead found '#x: otherX'
  ┌─ destructuring-private.js:8:12
  │
8 │   equals({ #x: otherX }) {
  │            ^^^^^^^^^^ Expected an identifier, a member name, or a rest pattern here

error[SyntaxError]: expected an identifier, a member name, or a rest pattern but instead found '#x: currentX'
  ┌─ destructuring-private.js:9:13
  │
9 │     const { #x: currentX } = this;
  │             ^^^^^^^^^^^^ Expected an identifier, a member name, or a rest pattern here


```


